fixed the right margin on mobile

--- a/styles.css
+++ b/styles.css
@@ -674,7 +674,7 @@ body{
         margin-top: 1rem;
         margin-bottom: 1rem;
         margin-left: -3rem;
-        margin-right: -3rem;
+        margin-right: -4rem;
       }
       .maintitle{
         font-size: 16px;
